[package]
name = "echor"
version = "0.1.0"
description = "Display a line of text"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"

# Optimize the release build for minimum binary size:
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
